[VAS-800] updated api definition, unit test and openapi
